--- a/mockup_eric/application.css
+++ b/mockup_eric/application.css
@@ -1,7 +1,8 @@
 /* This file contains the global page styles for headers footers and menus */
 html,
 body {
-	background-image: url(images/body_bg.jpg);
+	background-image: url(images/back.png);
+	background-repeat: repeat-x;
 	margin: 0;
 	padding: 0;
 	height: 100%;
@@ -10,28 +11,51 @@ body {
 }
 
 #container {
-	position: relative;
 	width: 1000px;
-	height: auto !important;
-	min-height: 100%;
-	margin: 0 auto -131px;
-	
-	background: #FFFFFF;
-	border-left: 1px solid;
-	border-right: 1px solid;
+	margin-left: auto;
+	margin-right: auto;
 }
 
 /* css for header */
 header {
-	height: 80px;
-	border-bottom: 1px solid;
-	background: #003EF4;
-	text-align: center;
+	background-image: url(images/back.png);
+	background-repeat: repeat-x;
+	height: 75px;
 	padding-top: 10px;
+	padding-left: 20px;
 }
 /* css for content */
 article {
-	padding:1em 1em 1em;
+	padding-left: 18px;
+	padding-top: 5px;
+	padding-bottom: 20px;
+	background: #FFFFFF;
+	border-bottom-left-radius: 7px;
+	border-top-left-radius: 7px;
+	border-top-right-radius: 7px;
+	border-bottom-right-radius: 7px;
+	box-shadow: rgb(0, 0, 0) 1px 1px 4px 0px;
+}
+
+h1 {
+	font-weight: 700; 
+	font-size: 220%; 
+}
+
+h2 {
+	font-weight: 700; 
+	font-size: 160%; 
+}
+
+#add-item-form {
+	background: #EFF3F6; 
+	padding: 1px 8px 1px 8px; 
+	margin-right: 20px; 
+	border: 1px solid;
+	border-bottom-left-radius: 7px;
+	border-top-left-radius: 7px;
+	border-top-right-radius: 7px;
+	border-bottom-right-radius: 7px;
 }
 
 a:link {
@@ -50,16 +74,7 @@ a:hover {
 
 /* css for footer */
 footer {
-	height: 125px;
-	position: relative;
-	width: 1000px;
-	margin: 0 auto;
-	border-top:6px double gray;
-	background: #ddd;
-	font-size: 13px;
-	color: #666666;
-	overflow: hidden;
-}
-.push {
-	height: 145px;
+	color: #999999;
+	text-align: center;
+	font-size: 11px;
 }
