--- a/mockup_eric/application.css
+++ b/mockup_eric/application.css
@@ -47,7 +47,7 @@ h2 {
 	font-size: 160%; 
 }
 
-#add-item-form {
+.add-item-forms {
 	background: #EFF3F6; 
 	padding: 1px 8px 1px 8px; 
 	margin-right: 20px; 
@@ -57,6 +57,21 @@ h2 {
 	border-top-right-radius: 7px;
 	border-bottom-right-radius: 7px;
 }
+
+/* css formating for the heirachy - a lot of lists */
+ul {
+	margin-left: -25px;
+}
+
+.indent {
+	list-style-type: none;
+}
+
+#rootChildren {
+	list-style-type: circle; 
+}
+
+/* formating link hover colours */
 
 a:link {
 	color: #0000FF;
