--- a/process_system/app/assets/stylesheets/application.css
+++ b/process_system/app/assets/stylesheets/application.css
@@ -1,16 +1,3 @@
-/*
- * This is a manifest file that'll be compiled into application.css, which will include all the files
- * listed below.
- *
- * Any CSS and SCSS file within this directory, lib/assets/stylesheets, vendor/assets/stylesheets,
- * or vendor/assets/stylesheets of plugins, if any, can be referenced here using a relative path.
- *
- * You're free to add application-wide styles to this file and they'll appear at the top of the
- * compiled file, but it's generally better to create a new file per style scope.
- *
- *= require_self
- *= require_tree .
- */
 /* This file contains the global page styles for headers footers and menus */
 html,
 body {
@@ -33,16 +20,54 @@ body {
 header {
 	background-image: url(images/back.png);
 	background-repeat: repeat-x;
-	height: 75px;
-	padding-top: 10px;
+	height: 85px;
 	padding-left: 20px;
+	overflow: hidden;
 }
+
+#logoutTab {
+	height: 30px; 
+	width: 84px; 
+	font-size: 14px;
+	background: #FFFFFF; 
+	margin-top: 55px;
+	margin-left: 865px;
+	border-top-left-radius: 7px;
+	border-top-right-radius: 7px;
+	box-shadow: rgb(0, 0, 0) 1px 1px 4px 0px;
+}
+
 /* css for content */
-article {
+#main {
 	padding-left: 18px;
 	padding-top: 5px;
 	padding-bottom: 20px;
 	background: #FFFFFF;
+	border-bottom-left-radius: 7px;
+	border-top-left-radius: 7px;
+	border-top-right-radius: 7px;
+	border-bottom-right-radius: 7px;
+	box-shadow: rgb(0, 0, 0) 1px 1px 4px 0px;
+}
+
+#centerDiv {
+	width: 400px;
+	height: 300px;
+	position: absolute;
+	top: 0;
+	bottom: 0;
+	left: 0;
+	right: 0;
+	margin: auto;
+}
+
+#loginTab {
+	width: 280px;
+	margin: auto;
+	background: #FFFFFF;
+	padding-top: 5px;
+	padding-bottom: 15px;
+	text-align: center;
 	border-bottom-left-radius: 7px;
 	border-top-left-radius: 7px;
 	border-top-right-radius: 7px;
@@ -60,9 +85,10 @@ h2 {
 	font-size: 160%; 
 }
 
-#add-item-form {
+.add-item-forms {
 	background: #EFF3F6; 
 	padding: 1px 8px 1px 8px; 
+	margin-top: 15px;
 	margin-right: 20px; 
 	border: 1px solid;
 	border-bottom-left-radius: 7px;
@@ -70,6 +96,21 @@ h2 {
 	border-top-right-radius: 7px;
 	border-bottom-right-radius: 7px;
 }
+
+/* css formating for the heirachy - a lot of lists */
+ul {
+	margin-left: -25px;
+}
+
+.indent {
+	list-style-type: none;
+}
+
+#rootChildren {
+	list-style-type: circle; 
+}
+
+/* formating link hover colours */
 
 a:link {
 	color: #0000FF;
@@ -82,7 +123,17 @@ a:visited {
 }
 
 a:hover {
-	color: #FF9900;
+	color: #33CCCC;
+}
+
+#logout  > a, #itemToRoot > a, #currentItemOptions > a {
+	color: #3366FF;
+	text-decoration: none;
+}
+
+#logout  > a:hover, #itemToRoot > a:hover, #currentItemOptions > a:hover {
+	color: #CC66FF;
+	text-decoration: underline;
 }
 
 /* css for footer */
