--- a/process_system/app/views/layouts/application.html.erb
+++ b/process_system/app/views/layouts/application.html.erb
@@ -10,8 +10,13 @@
 <body>
 	<div id = "container">
 		<header>
+			<div style = "float: left; width: 500px; padding-top: 10px;">
 			<p style = "font-weight: 700; font-size: 300%; letter-spacing: -2px; margin-top: 0px; color: #FFFFFF">Swedish Club of WA</p>
 			<p style = "font-weight: 200; font-size: 220%; letter-spacing: -2px; margin-top: -45px; margin-left: 100px"><i>Club Process System</i></p>
+			</div>
+			<div id = "logoutTab">
+				<p id = "logout" style = "padding-top: 5px; padding-left: 15px"><%= link_to "Sign out", signout_path, method: "delete" %></p>
+			</div>
 		</header>
 
 	<%= yield %>
