--- a/process_system/app/assets/stylesheets/application.css.erb
+++ b/process_system/app/assets/stylesheets/application.css.erb
@@ -1,7 +1,7 @@
 /* This file contains the global page styles for headers footers and menus */
 html,
 body {
-	background-image: url(<%=asset_path "back.png"%>);
+	background-image: url(<%= asset_path 'back.png' %>);
 	background-repeat: repeat-x;
 	margin: 0;
 	padding: 0;
@@ -50,6 +50,22 @@ header {
 	box-shadow: rgb(0, 0, 0) 1px 1px 4px 0px;
 }
 
+#title1 {
+	font-weight: 700; 
+	font-size: 300%; 
+	letter-spacing: -2px; 
+	margin-top: 0px; 
+	color: #FFFFFF
+}
+
+#title2 {
+	font-weight: 200; 
+	font-size: 220%; 
+	letter-spacing: -2px; 
+	margin-top: -45px; 
+	margin-left: 100px
+}
+
 #centerDiv {
 	width: 400px;
 	height: 300px;
@@ -59,6 +75,11 @@ header {
 	left: 0;
 	right: 0;
 	margin: auto;
+}
+
+#indexTitleDiv {
+	height: 70px;
+	padding-top: 10px;
 }
 
 #loginTab {
@@ -73,6 +94,14 @@ header {
 	border-top-right-radius: 7px;
 	border-bottom-right-radius: 7px;
 	box-shadow: rgb(0, 0, 0) 1px 1px 4px 0px;
+}
+
+#email {
+	margin-left: 40px;
+}
+
+#password {
+	margin-left: 15px;
 }
 
 h1 {
