--- a/process_system/app/assets/stylesheets/application.css.erb
+++ b/process_system/app/assets/stylesheets/application.css.erb
@@ -96,11 +96,11 @@ header {
 	box-shadow: rgb(0, 0, 0) 1px 1px 4px 0px;
 }
 
-#email {
+#session_email {
 	margin-left: 40px;
 }
 
-#password {
+#session_password {
 	margin-left: 15px;
 }
 
