--- a/process_system/app/views/layouts/application.html.erb
+++ b/process_system/app/views/layouts/application.html.erb
@@ -10,12 +10,12 @@
 <body>
 	<div id = "container">
 		<header>
-			<div style = "float: left; width: 500px; padding-top: 10px;">
-			<p style = "font-weight: 700; font-size: 300%; letter-spacing: -2px; margin-top: 0px; color: #FFFFFF">Swedish Club of WA</p>
-			<p style = "font-weight: 200; font-size: 220%; letter-spacing: -2px; margin-top: -45px; margin-left: 100px"><i>Club Process System</i></p>
+			<div id = "itemsTitleDiv">
+				<p id = "title1">Swedish Club of WA</p>
+				<p id = "title2"><i>Club Process System</i></p>
 			</div>
 			<div id = "logoutTab">
-				<p id = "logout" style = "padding-top: 5px; padding-left: 15px"><%= link_to "Sign out", signout_path, method: "delete" %></p>
+				<p id = "logout"><%= link_to "Log Out", signout_path, method: "delete" %></p>
 			</div>
 		</header>
 
@@ -23,7 +23,7 @@
 
 	</div>
 	<footer>
-		<p>&copy; 2013 CITS3200 Group G</p>
+		<p>&copy; 2013 Swedish Club of WA - Website Created by CITS3200 Group G</p>
 	</footer>
 </body>
 </html>
