Added Email Reminder Form, delete mockup folder

--- a/app/assets/stylesheets/application.css.erb
+++ b/app/assets/stylesheets/application.css.erb
@@ -174,7 +174,7 @@ h2 {
 	margin-top: 0px;
 }
 
-#add-item-form, #add-root-item-form {
+#add-item-form, #add-root-item-form, #set-email-form {
 	background: #EFF3F6; 
 	padding: 1px 8px 1px 8px; 
 	margin-top: 15px;
