--- a/process_system/app/views/layouts/application.html.erb
+++ b/process_system/app/views/layouts/application.html.erb
@@ -4,8 +4,11 @@
 	<meta charset = "utf-8"/>
 	<title> Club Process System - Swedish Club of WA </title>
 	<%= stylesheet_link_tag "application" %>
-	<%= javascript_include_tag 'http://code.jquery.com/jquery-1.10.1.min.js' %>
+	<%= stylesheet_link_tag "http://code.jquery.com/ui/1.10.3/themes/smoothness/jquery-ui.css" %>
 	<%= javascript_include_tag 'application' %>
+	<%= javascript_include_tag 'http://code.jquery.com/jquery-1.10.1.min.js' %>
+	<%= javascript_include_tag 'http://code.jquery.com/ui/1.10.3/jquery-ui.js' %>
+	
 </head>
 <body>
 	<div id = "container">
