--- a/process_system/app/assets/stylesheets/application.css.erb
+++ b/process_system/app/assets/stylesheets/application.css.erb
@@ -80,8 +80,8 @@ header {
 	width: 280px;
 	margin: auto;
 	background: #FFFFFF;
-	padding-top: 5px;
-	padding-bottom: 15px;
+	padding-top: 10px;
+	padding-bottom: 17px;
 	text-align: center;
 	border-bottom-left-radius: 7px;
 	border-top-left-radius: 7px;
@@ -191,6 +191,14 @@ h2 {
 }
 
 #new-item-body, #new-root-item-body {
+	margin-left: 6px;
+}
+
+#email-datepicker {
+	margin-left: 47px;
+}
+
+#email-recip {
 	margin-left: 6px;
 }
 
