--- a/process_system/app/views/items/index.html.erb
+++ b/process_system/app/views/items/index.html.erb
@@ -9,7 +9,7 @@
 		<li class = "indent">
 		<ul>
 		  <li><a href = "#">Transport</a></li>
-		  
+		  <li><a href = "#">Transport</a></li>
 		</ul>
 		</li>
 	  </ul></li>
@@ -29,18 +29,19 @@
 	  <p>The Swedish clubs annual trip to Ikea</p>
 	</form>
 	
-	<div id = "currentItemChildren">
-	  <form id = "child1">
-		<h2><input type = "checkbox" class = "itemCheckbox"/><a href = "#"> Transport</a></h2>
-		<p>A bus needs to be hired from Hireabus.com</p>
-		<p class = "emailReminder">Email to peterthonnel@swedishclub.com at 18:00 12/12/2013</p>
-	  </form>
-	</div>
+	<form id = "currentItemChildren">
+	  <h2><input type = "checkbox" class = "itemCheckbox"/><a href = "#"> Transport</a></h2>
+	  <p>A bus needs to be hired from Hireabus.com</p>
+	  <p class = "emailReminder">Email to peterthonnel@swedishclub.com at 0:00 12/12/2013</p>
+	  <h2><input type = "checkbox" class = "itemCheckbox"/><a href = "#"> Transport</a></h2>
+	  <p>A bus needs to be hired from Hireabus.com</p>
+	  <p class = "emailReminder">Email to peterthonnel@swedishclub.com at 0:00 12/12/2013</p>
+	</form>
 	
 	<form id = "add-item-form">
-	<p>Title: <input type = "text" id = "new-item-title" size = "103"/></p>
-	<p>Body: <input type = "text" id = "new-item-body" size = "103"/></p>
-	<p>Enable Complete/Incomplete status?<input type = "checkbox" id = "new-item-active"/></p>
+	<p>Title: <input type = "text" id = "new-item-title" size = "80"/></p>
+	<p>Body: <input type = "text" id = "new-item-body" size = "80"/></p>
+	<p>Enable Complete/Incomplete status? <input type = "checkbox" id = "new-item-active"/></p>
 	<p class = "newFormOptions">
 	  <a id = "add-item-confirm" href = "#">Confirm Item</a> | 
 	  <a id = "add-item-clear" href = "#">Clear</a> | 
@@ -49,21 +50,21 @@
 	</form>
 	
 	<form id = "set-email-form">
-	<p>Date: <input type = "text" id = "datepicker"/><small> MM/DD/YYYY</small></p>
-	<p>Email To: <input type = "text" id = "email-email" size = "100"/></p>
-	<p>Send all subchildren too?<input type = "checkbox" id = "email-children"/></p>
+	<p>Date: <input type = "text" id = "email-datepicker" size = "9"/><small> MM/DD/YYYY at 0:00</small></p>
+	<p>Recipient(s): <input type = "text" id = "email-recip" size = "80" placeholder = "example@swedishclubwa.com"/></p>
+	<p>Send all subchildren too? <input type = "checkbox" id = "email-children"/></p>
 	<p class = "newFormOptions">
-	  <a id = "add-item-confirm" href = "#">Set Email Reminder</a> | 
-	  <a id = "add-item-clear" href = "#">Clear</a> | 
-	  <a id = "add-item-cancel" href = "#">Cancel</a>
+	  <a id = "set-email-confirm" href = "#">Set Email Reminder</a> | 
+	  <a id = "set-email-clear" href = "#">Clear</a> | 
+	  <a id = "set-email-cancel" href = "#">Cancel</a>
 	</p>
 	</form>
 	
 	<form id = "add-root-item-form">
 	<p id = "rootFormTitle">Adding New Item to Root:</p>
-	<p>Title: <input type = "text" id = "new-root-item-title" size = "103"/></p>
-	<p>Body: <input type = "text" id = "new-root-item-body" size = "103"/></p>
-	<p>Enable Complete/Incomplete status?<input type = "checkbox" id = "new-root-item-active"/></p>
+	<p>Title: <input type = "text" id = "new-root-item-title" size = "80"/></p>
+	<p>Body: <input type = "text" id = "new-root-item-body" size = "80"/></p>
+	<p>Enable Complete/Incomplete status? <input type = "checkbox" id = "new-root-item-active"/></p>
 	<p class = "newFormOptions">
 	  <a id = "add-root-item-confirm" href = "#">Confirm Item</a> | 
 	  <a id = "add-root-item-clear" href = "#">Clear</a> | 
