--- a/process_system/app/views/items/index.html.erb
+++ b/process_system/app/views/items/index.html.erb
@@ -46,7 +46,7 @@
 	  <h2><input type = "checkbox" class = "itemCheckbox"/><a href = "#"> Transport</a></h2>
 	  <p>A bus needs to be hired from Hireabus.com</p>
 	  <p class = "emailReminder">Email to peterthonnel@swedishclub.com at 0:00 12/12/2013</p>
-	  <h2><input type = "checkbox" class = "itemCheckbox"/><a href = "#"> Transport</a></h2>
+	  <h2><input type = "checkbox" class = "itemCheckbox"/><a href = "#"> Transport2</a></h2>
 	  <p>A bus needs to be hired from Hireabus.com</p>
 	  <p class = "emailReminder">Email to peterthonnel@swedishclub.com at 0:00 12/12/2013</p>
 	</form>
