User can now add item to the root or to another item.

--- a/app/assets/stylesheets/application.css.erb
+++ b/app/assets/stylesheets/application.css.erb
@@ -159,9 +159,9 @@ header {
 	margin-left: 15px;
 }
 
-/* css formating for the heirachy - a lot of lists */
+/* css formating for the hierachy - a lot of lists */
 
-#heirachyDiv {
+#hierachyDiv {
 	float: left;
 	width: 165px;
 }
