--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,15 +14,21 @@
 	<div id = "container">
 		<header>
 			<div id = "itemsTitleDiv">
-				<p id = "title1"><%= link_to "Swedish Club of WA", items_path %></p>
-				<p id = "title2"><i><%= link_to "Club Process System", items_path %></i></p>
+				<%= link_to items_path do %>
+					<p id = "title1">Swedish Club of WA</p>
+					<p id = "title2"><i>Club Process System</i></p>
+				<% end %>
 			</div>
 			<div id = "logoutTab">
 				<p id = "logout"><%= link_to "Log Out", signout_path, method: "delete" %></p>
 			</div>
 		</header>
 
-	<%= yield %>
+		<div id = "main">
+	
+			<%= yield %>
+
+		</div>
 
 	</div>
 	<footer>
