--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,9 +5,9 @@
 	<title> Club Process System - Swedish Club of WA </title>
 	<%= stylesheet_link_tag "application" %>
 	<%= stylesheet_link_tag "http://code.jquery.com/ui/1.10.3/themes/smoothness/jquery-ui.css" %>
-	<%= javascript_include_tag 'application' %>
-	<%= javascript_include_tag 'http://code.jquery.com/jquery-1.10.1.min.js' %>
-	<%= javascript_include_tag 'http://code.jquery.com/ui/1.10.3/jquery-ui.js' %>
+	<%= javascript_include_tag "application" %>
+	<%= javascript_include_tag "http://code.jquery.com/jquery-1.10.1.min.js" %>
+	<%= javascript_include_tag "http://code.jquery.com/ui/1.10.3/jquery-ui.js" %>
 	
 </head>
 <body>
@@ -25,11 +25,8 @@
 		</header>
 
 		<div id = "main">
-	
 			<%= yield %>
-
 		</div>
-
 	</div>
 	<footer>
 		<p>&copy; 2013 Swedish Club of WA - Website Created by CITS3200 Group G</p>
