--- a/app/assets/stylesheets/application.css.erb
+++ b/app/assets/stylesheets/application.css.erb
@@ -32,7 +32,7 @@ header {
 
 #itemsTitleDiv {
 	float: left;
-	width: 500px;
+	width: 320px;
 	padding-top: 10px;
 }
 
@@ -41,7 +41,7 @@ header {
 	font-size: 300%; 
 	letter-spacing: -2px; 
 	margin-top: 0px; 
-	color: #FFFFFF
+	color: #FFFFFF;
 }
 
 #title2 {
@@ -49,7 +49,8 @@ header {
 	font-size: 220%; 
 	letter-spacing: -2px; 
 	margin-top: -45px; 
-	margin-left: 100px
+	margin-left: 100px;
+	color: #000000;
 }
 
 /* css for content formatting */
@@ -278,14 +279,6 @@ a:visited {
 
 a:hover {
 	color: #3399FF;
-}
-
-#title1 > a {
-	color: #FFFFFF;
-}
-
-#title2 > i > a {
-	color: #000000;
 }
 
 #logout  > a, #itemToRoot > a, #currentItemOptions > a, .newFormOptions > a {
