--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -2,31 +2,59 @@
   
 <div id = "contentPane">
   <p id = "currentItemOptions">
-    <%= link_to "+ Add Item", new_item_path(:pid =>  @item.id) %>
+	<%= link_to "+ Add Item (working)", new_item_path(:pid => @item.id) %> | 
+    <a id = "add-item" href = "#">+ Add Item (at bottom but not working)</a> |
+	<a id = "go-up" href = "#">Go Up</a>
   </p>
 
-  <h1><%= @item.title %></h1>
-  <div class = "itemOptions">
-	<a id = "edit" href = "#" title = "Edit"></a>
-	<a id = "set-email" href = "#" title = "Set Email Reminder"></a>
-  </div>
-  <p><%= @item.body %></p>
-  <% @item.triggers.each do |trigger| %>
-    <p class = "emailReminder">Email to <% trigger.emails.each do |email| %><%= email.email %> at <%= trigger.date_trigger %></p>
+  <form id = "currentItem">
+    <h1><%= @item.title %></h1> <!-- put checkbox here, class: inactive when inactive -->
+    <div class = "itemOptions">
+  	  <a id = "edit" href = "#" title = "Edit"></a>
+	  <a id = "set-email" href = "#" title = "Set Email Reminder"></a>
+    </div>  
+    <p><%= @item.body %></p>
+    <% @item.triggers.each do |trigger| %>
+      <p class = "emailReminder">Email to <% trigger.emails.each do |email| %><%= email.email %> at <%= trigger.date_trigger %></p>
+      <% end %>
     <% end %>
-  <% end %>
+  </form>
+  
+  <!-- TODO patrick/raissa: make the forms work :D  -->
+  <form id = "set-email-form">
+	<p>Date: <input type = "text" id = "email-datepicker" size = "9"/><small> MM/DD/YYYY at 0:00</small></p>
+	<p>Recipient(s): <input type = "text" id = "email-recip" size = "80" placeholder = "example@swedishclubwa.com"/></p>
+	<p>Send all subchildren too? <input type = "checkbox" id = "email-children"/></p>
+	<p class = "newFormOptions">
+	  <a id = "set-email-confirm" href = "#">Set Email Reminder</a> | 
+	  <a id = "set-email-clear" href = "#">Clear</a> | 
+	  <a id = "set-email-cancel" href = "#">Cancel</a>
+	</p>
+  </form>
   
   <form id = "currentItemChildren">
   <% @children.each do |child| %>
-      <h2><%= child.title %></h2>
-	  <p>
-      <% #raw() needed to display html %>
-      <%= raw(child.body) %>
-      </p>
-	  <% child.triggers.each do |trigger| %>
-      <p class = "emailReminder">Email to <% trigger.emails.each do |email| %><%= email.email %> at <%= trigger.date_trigger %></p>
-      <% end %>
+    <h2><%= link_to child.title, child %></h2> <!-- put checkbox here, class: inactive when inactive -->
+	<p>
+    <% #raw() needed to display html %>
+    <%= raw(child.body) %>
+    </p>
+	<% child.triggers.each do |trigger| %>
+    <p class = "emailReminder">Email to <% trigger.emails.each do |email| %><%= email.email %> at <%= trigger.date_trigger %></p>
+    <% end %>
   <% end %>
   <% end %>
   </form>
+  
+  <%= form_for(:item, url: items_path, html: {id: "add-item-form"}) do |f| %>
+    <p>Title: <%= f.text_field :title, size: 80, required: true %></p>
+    <p>Body: <%= f.text_field :body, size: 80, required: true %></p>
+    <p>Enable Complete/Incomplete status? <%= f.check_box :task %></p>
+    <%= hidden_field_tag 'item[pid]', params[:pid] %>
+    <p class = "newFormOptions">
+      <%= f.submit "Confirm item" %>
+      <a id = "add-item-clear" href = "#">Clear</a> | 
+      <a id = "add-item-cancel" href = "#">Cancel</a>
+    </p>
+  <% end %>
 </div>
