--- a/app/views/items/new.html.erb
+++ b/app/views/items/new.html.erb
@@ -1,3 +1,5 @@
+<!-- not needed for now, scheduled for removal -->
+
 <%= render 'hierachy' %>
 
 <div id = "contentPane">
@@ -8,7 +10,7 @@
     <p id = "rootFormTitle">Adding New Item:</p>
   <% end %>
 
-  <%= form_for(:item, url: items_path, html: {id: "thisIdbreaksit"}) do |f| %>
+  <%= form_for(:item, url: items_path) do |f| %>
     <p><%= f.label :title %><%= f.text_field :title, size: 103, required: true %></p>
     <p><%= f.label :body %><%= f.text_field :body, size: 103, required: true %></p>
     <p><%= f.label :task%>Enable Complete/Incomplete status?<%= f.check_box :task %></p>
