--- a/app/views/items/new.html.erb
+++ b/app/views/items/new.html.erb
@@ -1,5 +1,3 @@
-<!-- not needed for now, scheduled for removal -->
-
 <%= render 'hierachy' %>
 
 <div id = "contentPane">
@@ -13,7 +11,7 @@
   <%= form_for(:item, url: items_path) do |f| %>
     <p><%= f.label :title %><%= f.text_field :title, size: 103, required: true %></p>
     <p><%= f.label :body %><%= f.text_field :body, size: 103, required: true %></p>
-    <p><%= f.label :task%>Enable Complete/Incomplete status?<%= f.check_box :task %></p>
+    <p><%= f.label :task, 'Enable Complete/Incomplete status?' %><%= f.check_box :task %></p>
     <%= hidden_field_tag 'item[pid]', params[:pid] %>
     <p class = "newFormOptions">
       <%= f.submit "Confirm item" %>
