--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -46,9 +46,9 @@
   </form>
   
   <%= form_for(:item, url: items_path, html: {id: "add-item-form"}) do |f| %>
-    <p>Title: <%= f.text_field :title, size: 80, required: true, value: '' %></p>
-    <p>Body: <%= f.text_field :body, size: 80, required: true, value: '' %></p>
-    <p>Enable Complete/Incomplete status? <%= f.check_box :task, value: '' %></p>
+    <p><%= f.label :title, 'Title:' %><%= f.text_field :title, size: 80, required: true, value: '' %></p>
+    <p><%= f.label :body, 'Body:' %><%= f.text_field :body, size: 80, required: true, value: '' %></p>
+    <p><%= f.label :task, 'Enable Complete/Incomplete status?' %><%= f.check_box :task, value: '' %></p>
     <%= hidden_field_tag 'item[pid]', @item.id %>
     <p class = "newFormOptions">
       <%= f.submit "Confirm item" %>
